--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic
-title: 潘柏信
+title: 夏浅
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
@@ -30,14 +30,14 @@ social:
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
-baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+#baidu:
+#    id: 8ba1c6be0953b6f9c2ba38e57f615421
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3  
-    host: auto  
+#ga:
+#    id: UA-84134159-3
+#    host: auto
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
