--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
-title: 夏浅
-subtitle: 个人站
+title: liu的日志
+subtitle: 夏浅的个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
@@ -18,14 +18,14 @@ comment:
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
-social:
-    weibo: 5366874726 
-    github: leopardpan
-    # zhihu: panpanleopard
-    # juejin: xxx
-    jianshu: 2ada30d8d0f7
-    # twitter: 
-    mail: leopardpan@icloud.com
+#social:
+#    weibo: 5366874726
+#    github: leopardpan
+#    # zhihu: panpanleopard
+#    # juejin: xxx
+#    jianshu: 2ada30d8d0f7
+#    # twitter:
+#    mail: leopardpan@icloud.com
 
 
 # 百度统计 
